// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion komponent Sender videre html atributter 1`] = `
<Accordion
  data-testid="testidparent123"
  processList={true}
>
  <div
    className="accordion-44"
    data-testid="testidparent123"
  >
    <Grid
      padding="0px"
    >
      <div
        className="ske-Grid-53 "
        dir="ltr"
      >
        <AccordionItem
          data-testid="testid123"
          key=".$.0"
          processList={true}
          stepId="step-1-1"
          stepNumber={1}
          totalSteps={1}
        >
          <div
            className="wrapperStep-43"
            data-testid="testid123"
            key="1"
          >
            <GridRow
              rowSpacing="0px"
            >
              <div
                className="ske-Grid-row-57 "
              >
                <GridCol
                  noSpacing={true}
                >
                  <div
                    className="ske-Grid-col-58 "
                  >
                    <GridRow
                      rowSpacing="0px"
                    >
                      <div
                        className="ske-Grid-row-57 "
                      >
                        <GridCol
                          md={1}
                          noSpacing={true}
                          sm={2}
                          xl={1}
                        >
                          <div
                            className="ske-Grid-col-60 "
                          >
                            <div
                              className="stepNumber-47"
                            >
                              <span
                                aria-label="Steg 1"
                                id="StepIdstep-1-1"
                              >
                                1
                              </span>
                            </div>
                          </div>
                        </GridCol>
                        <GridCol
                          md={10}
                          noSpacing={true}
                          sm={9}
                          xl={11}
                        >
                          <div
                            className="ske-Grid-col-61 "
                          >
                            <hr />
                            <ToggleContent
                              isContentOpen={false}
                              onClick={[Function]}
                              processList={true}
                              stepId="step-1-1"
                              styles={
                                Object {
                                  "accordion": "accordion-44",
                                  "containerStep": "containerStep-42",
                                  "content": "content-45",
                                  "heading": "heading-46",
                                  "stepLine": "stepLine-48",
                                  "stepNumber": "stepNumber-47",
                                  "subComponentStyles": Object {},
                                  "subtitle": "subtitle-52",
                                  "toggleButton": "toggleButton-49",
                                  "toggleButtonContent": "toggleButtonContent-51",
                                  "toggleButtonOpen": "toggleButtonOpen-50",
                                  "wrapperStep": "wrapperStep-43",
                                }
                              }
                            />
                            <div
                              className="content-45"
                              id="step-1-1"
                            >
                              <p>
                                Her vises innhold
                              </p>
                            </div>
                            <hr />
                          </div>
                        </GridCol>
                      </div>
                    </GridRow>
                  </div>
                </GridCol>
              </div>
            </GridRow>
          </div>
        </AccordionItem>
      </div>
    </Grid>
  </div>
</Accordion>
`;

exports[`Accordion komponent matcher snapshot 1`] = `
<Accordion>
  <div
    className="accordion-44"
  >
    <Grid
      padding="0px"
    >
      <div
        className="ske-Grid-53 "
        dir="ltr"
      >
        <AccordionItem
          key=".$.0"
          stepNumber={1}
          totalSteps={1}
        >
          <div
            className="wrapperStep-43"
            key="1"
          >
            <GridRow
              rowSpacing="0px"
            >
              <div
                className="ske-Grid-row-57 "
              >
                <GridCol
                  noSpacing={true}
                >
                  <div
                    className="ske-Grid-col-58 "
                  >
                    <GridRow
                      rowSpacing="0px"
                    >
                      <div
                        className="ske-Grid-row-57 "
                      >
                        <GridCol
                          md={12}
                          noSpacing={true}
                          sm={12}
                          xl={12}
                        >
                          <div
                            className="ske-Grid-col-59 "
                          >
                            <hr />
                            <ToggleContent
                              isContentOpen={false}
                              onClick={[Function]}
                              styles={
                                Object {
                                  "accordion": "accordion-44",
                                  "containerStep": "containerStep-42",
                                  "content": "content-45",
                                  "heading": "heading-46",
                                  "stepLine": "stepLine-48",
                                  "stepNumber": "stepNumber-47",
                                  "subComponentStyles": Object {},
                                  "subtitle": "subtitle-52",
                                  "toggleButton": "toggleButton-49",
                                  "toggleButtonContent": "toggleButtonContent-51",
                                  "toggleButtonOpen": "toggleButtonOpen-50",
                                  "wrapperStep": "wrapperStep-43",
                                }
                              }
                            />
                            <div
                              className="content-45"
                            >
                              <p>
                                Her vises innhold
                              </p>
                            </div>
                            <hr />
                          </div>
                        </GridCol>
                      </div>
                    </GridRow>
                  </div>
                </GridCol>
              </div>
            </GridRow>
          </div>
        </AccordionItem>
      </div>
    </Grid>
  </div>
</Accordion>
`;
